--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
       <button onclick="saveEdit()">Done</button>
     </div>
   </div>
+  
+  <footer>
+  <div class="footer-content">
+    <p>&copy; 2025 E-Wallet. All rights reserved.</p>
+    <div class="footer-icons">
+      <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+      <a href="#" aria-label="Fork"><i class="fas fa-code-branch"></i></a>
+    </div>
+  </div>
+</footer>
 
 <script src="script.js"></script>
 </body>
