--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
   <div class="footer-content">
     <p>&copy; 2025 E-Wallet Manager</p>
     <div class="footer-icons">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/codewithdhruba01"><i class="fa-brands fa-github"></i></a>
+      <a href="https://github.com/codewithdhruba01/E-Wallet"><i class="fa-solid fa-code-fork"></i></a>
+      <a href="https://www.linkedin.com/in/dhrubaraj-pati"><i class="fa-brands fa-linkedin-in"></i></a>
     </div>
   </div>
 </footer>
